--- a/cogsci_writeup/uncertain_praise.Rmd
+++ b/cogsci_writeup/uncertain_praise.Rmd
@@ -25,6 +25,9 @@ knitr::opts_chunk$set(fig.width=3, fig.height=3, fig.crop = F, fig.pos = "tb", f
 ```
 
 ```{r, libraries}
+#install.packages("devtools")
+#devtools::install_github("langcog/langcog")
+
 library(png)
 library(grid)
 library(ggplot2)
