--- a/cogsci_writeup/uncertain_praise.Rmd
+++ b/cogsci_writeup/uncertain_praise.Rmd
@@ -75,19 +75,28 @@ multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
 }
 ```
 
-One of the challenges of early childhood is learning about one's abilities, traits, skills, and weaknesses, and an important source of information is others' evaluations. Performance praise -- positive evaluations of a person's performances or attributes [see @kanouse1981semantics] -- has become ubiquitous in parenting and education practices in Western societies. In order to make appropriate inferences about their abilities and products, children must learn to figure out when praise is meaningful and when it should be discounted. Here, we examine children's sensitivity to the \textit{informativeness} of praise and if so, whether children are strategic in how they use praise to assess their own work.
+Imagine that you just gave a presentation but you are not certain how well you did. You ask your friends, Tim and Sam, what they think. Whereas Tim usually provides positive feedback to everyone regardless of how well they actually performed, Sam tends to provide more helpful, honest feedback. Given these different patterns of evaluations, you might use Sam's evaluation to actually learn about the quality of your presentation. As adults, we intuitively understand that others' feedback can be differentially informative depending on the evaluator's expertise, commmunicative goal, or sincerity, and we can take these factors into consideration when interpreting others' evaluations of us. These abilities might be especially critical for young children who are attempting to learn about their skills, abilities, and weaknesses amidst a flood of constant praise and feedback from others. 
+
+Performance praise -- positive evaluations of a person's performances or attributes [see @kanouse1981semantics] -- has become ubiquitous in parenting and education practices in Western societies. Praise can influence children's intrinsic motivation and subsquent learning behaviors [see @henderlong2002effects for a review], and children appear to be able to differentiate between praise that is inflated or not [@brummelman2014s], or praise that is directed at an inherent ability versus at the effort involved in pursuing a task [@kamins1999person]. However, one open question is whether young children can reason about the \textit{informativeness} of others' praise, or the reliable contingency of praise on the quality of a product. Further, can they use others' informativeness to selectively assess their own work?
+
+<!-- However, while much work has been devoted to how praise influences children's self-esteem [e.g., @brummelman2014s], intrinsic motivation [see @henderlong2002effects for a review], and learning behaviors [e.g., @mueller1998praise], one open question is how young children might monitor the \textit{informativeness} of praise and selectively use others' praise to assess their own work. -->
+
+
+<!-- In the current work, we examine whether young children share these intuitions, in particular whether they can (1) track the informativeness of others' praise from prior observations and (2) how they use might others' informativeness to appropriately evaluate their own work. -->
+
+
+
+
+<!-- In order to make appropriate inferences about their abilities and products, children must learn to figure out when praise is meaningful and when it should be discounted. Here, we examine children's sensitivity to the \textit{informativeness} of praise and if so, whether children are strategic in how they use praise to assess their own work. -->
 
 <!-- One of the challenges of childhood is learning about one's abilities, traits, skills, and weaknesses. There are many ways in which children can learn about themselves (e.g., observing their successes and failures, comparing themselves to others), but one important source of information is \textit{others' evaluations} of who they are ("You are so smart!") and what they can do ("You are great at tracing!"). However, young children are constantly flooded with social information about the self, and it might be difficult for them to determine which sources of information are meaningful and which should be discounted. -->
 
 <!-- Performance praise -- positive evaluations of a person's performances or attributes [see @kanouse1981semantics] -- has become ubiquitous in parenting and education practices in Western societies. How do children reason about and evaluate others' praise for them?  -->
 
-However, while much work has been devoted to how praise influences children's self-esteem [e.g., @brummelman2014s], intrinsic motivation [see @henderlong2002effects for a review], and learning behaviors [e.g., @mueller1998praise], one open question is how young children might evaluate the \textit{informational value} of praise depending on who it comes from. As adults, we intuitively understand that not all praise carries equal weight: people may vary in their competence, expertise, or communicative goals [@yoon2016talking] and we should take these factors into consideration when interpreting praise.
-
-For instance, imagine that you are trying out different cookie recipes and you ask two of your friends, Anne and Sally, what they think. You remember that Anne usually tries to be nice and says that everything tastes good, but Sally tends to provide more helpful, honest feedback and only says that something tastes good if she really believes it tastes good. Given this, you might interpret each friend's praise differently: if Anne says she likes the cookies, then you might not learn that much about the quality of the cookie itself, but if Sally says she likes it, then you might infer that the cookie is really good. In the current work, we examine whether young children share these intuitions, in particular whether they can (1) track the informativeness of others' praise from prior observations and (2) how they use might others' informativeness to appropriately evaluate their own work.
 
 <!-- For instance, imagine that you are learning how to make cookies. You make two batches of cookies and ask two of your friends, Anne and Sally, what they think. Anne always says that anyone's cookies are good, even if they are not very tasty. On the other hand, Sally provides more helpful, honest feedback and only says that the cookies are good when they are actually good. So, Anne tries one type of cookie and says that it is great; Sally tries the other type of cookie and also says that it is great. Although both friends provided the same praise for each cookie, you might be more certain about Sally's evaluation and infer that that batch of cookies is better. In the current work, we examine whether young children can track the informativeness of others' praise from prior observations and how they use might others' informativeness to appropriately evaluate their own work.  -->
 
-Some prior work has argued that children may perceive praise as insincere when it is overly general or inconsistent with how the child views herself, especially when the child can think of counterexamples to the evaluation [see @henderlong2002effects]. While the consistency between the child's and informant's evaluation of a product the child created could provide cues to sincerity, children can also observe whether the contingency of an informant's praise on quality to determine who to trust for evaluative information.
+<!-- Some prior work has argued that children may perceive praise as insincere when it is overly general or inconsistent with how the child views herself, especially when the child can think of counterexamples to the evaluation [see @henderlong2002effects]. While the consistency between the child's and informant's evaluation of a product the child created could provide cues to sincerity, children can also observe whether the contingency of an informant's praise on quality to determine who to trust for evaluative information. -->
 
 <!-- Main question + children's sensitivity to sincerity -->
 
@@ -101,7 +110,7 @@ Second, recent work has revealed that young children are biased to trust testimo
 
 This work on children's positivity bias in the selective trust literature has largely pitted an informant's valence (positive qualities or positive information) against her expertise or the consensus of a group. In these studies, children did not have access to information about the target agent or agent's product so they were unable to evaluate whether the speaker's evaluation was appropriate or not. However, even infants make appropriate social evaluations [e.g., @hamlin2007social] and preschool-aged children can differentiate amongst qualities of others' products to make inferences about their own abilities [seeing that others have created better or worse tracings than their own; @magid2015quit]. So, to the extent that children themselves can evaluate a product, they might be sensitive to the contingency of a speaker's evaluation on the subjective quality of the product and use this to judge the informational value of a speaker's praise.
 
-The present work asks whether young children can track the informativeness of others' praise by observing others' evaluations of another child, and if so, whether they can then use others' informativeness to appropriately evaluate their own work. We chose a task that preschool-aged children are familiar with but motivated to improve on: tracing shapes with a pen. Experiment 1 confirms that adults can differentiate between a teacher who always provides praise (Overpraise Teacher) and teacher who only praises the better tracings (Contingent Praise Teacher); they can use teachers' prior informativeness to appropriately evaluate which of two hidden tracings is better. In a similar, first-person paradigm, experiment 2 demonstrates that even 4- and 5-year-olds can differentiate between these two types of teachers and endorse the Contingent Praise Teacher's praise. Experiment 3 controls for the frequency of praise provided by each teacher by pitting the Contingent Praise Teacher against a teacher who only provides praise to the worse tracings (Inaccurate Praise Teacher). 
+The present work asks whether young children can track the informativeness of others' praise by observing others' evaluations of another child, and if so, whether they can then use others' informativeness to appropriately evaluate their own work. We chose a task that preschool-aged children are familiar with but motivated to improve on: tracing shapes with a pen. Experiment 1 confirms that adults can differentiate between a teacher who always provides praise (Overpraise Teacher) and teacher who only praises the better tracings (Selective Teacher); they can use teachers' prior informativeness to appropriately evaluate which of two hidden tracings is better. In a similar, first-person paradigm, experiment 2 demonstrates that even 4- and 5-year-olds can differentiate between these two types of teachers and endorse the Selective Teacher's praise. Experiment 3 controls for the frequency of praise provided by each teacher by pitting the Selective Teacher against a teacher who only provides praise to the worse tracings (Selective-Reverse Teacher). 
 
 #Experiment 1: Adults
 
@@ -127,22 +136,22 @@ adult.dems <- d_filt_adult %>%
 
 ###Stimuli
 
-For the warm-up evaluation question, subjects first saw one really good tracing and one really bad tracing of simple shapes made with a blue marker. Subjects watched two videos: the Contingent Praise Teacher video and the Overpraise Teacher video. 
+For the warm-up evaluation question, subjects first saw one really good tracing and one really bad tracing of simple shapes made with a blue marker. Subjects watched two videos: the Selective Teacher video and the Overpraise Teacher video. 
 
-In each video, the teacher (Jane or Susan; actor counterbalanced) was facing the camera on one side of the table and "Johnny", a child actor, was sitting with his back facing the camera. There were six tracings on the table in a row (three really good tracings and three really bad tracings); the good and bad tracings were equivalent in quality to the good and bad tracings shown in the warm-up evaluation question. At the start of the video, Johnny told the teacher that he made the tracings on the table and that he wants to know which tracings are good because he's going to enter one of them into a contest. The teachers evaluated the tracings one at a time from right to left: in the Overpraise Teacher video, the teacher provided positive, undifferentiated feedback ("Wow, that's great!") for all six tracings and put a sticker on each tracing. In the Contingent Praise Teacher video, the teacher provided positive feedback ("Wow, that's great!") and put stickers on the three good tracings and neutral feedback ("Hm, this one's okay!", said in a positive tone) for the three bad tracings. The quality of tracings alternated from right to left (good, bad, etc.).
+In each video, the teacher (Jane or Susan; actor counterbalanced) was facing the camera on one side of the table and "Johnny", a child actor, was sitting with his back facing the camera. There were six tracings on the table in a row (three really good tracings and three really bad tracings); the good and bad tracings were equivalent in quality to the good and bad tracings shown in the warm-up evaluation question. At the start of the video, Johnny told the teacher that he made the tracings on the table and that he wants to know which tracings are good because he's going to enter one of them into a contest. The teachers evaluated the tracings one at a time from right to left: in the Overpraise Teacher video, the teacher provided positive, undifferentiated feedback ("Wow, that's great!") for all six tracings and put a sticker on each tracing. In the Selective Teacher video, the teacher provided positive feedback ("Wow, that's great!") and put stickers on the three good tracings and neutral feedback ("Hm, this one's okay!", said in a positive tone) for the three bad tracings. The quality of tracings alternated from right to left (good, bad, etc.).
 
 ###Procedure
 
 Adults were first shown two tracings that differed in quality (see Stimuli section) and were asked to evaluate which of two tracings is better; only subjects who chose the better tracing were included in analyses. 
 
-Next, subjects were introduced to a student, Johnny, who really wants to know which of his tracings are good because he's going to enter one of them into a contest. Then, subjects watched videos of the Contingent Praise Teacher and Overpraise Teacher (video order counterbalanced) providing feedback to Johnny about his tracings; each teacher provided feedback on a different set of six tracings. After each video, subjects were asked a memory check about how many tracings the teacher said were great and only subjects who answered this correctly ("3" for the Contingent Praise Teacher and "6" for the Overpraise Teacher were included in analyses. 
+Next, subjects were introduced to a student, Johnny, who really wants to know which of his tracings are good because he's going to enter one of them into a contest. Then, subjects watched videos of the Selective Teacher and Overpraise Teacher (video order counterbalanced) providing feedback to Johnny about his tracings; each teacher provided feedback on a different set of six tracings. After each video, subjects were asked a memory check about how many tracings the teacher said were great and only subjects who answered this correctly ("3" for the Selective Teacher and "6" for the Overpraise Teacher were included in analyses. 
 
-```{r image, fig.env = "figure*", fig.pos = "h", fig.align='center', fig.width=7, fig.height=7, set.cap.width=T, num.cols.cap=2, fig.cap = "(A) Examples of good and bad tracings that subjects saw in the warm-up evaluation questions and teacher videos for Experiments 1-3. (B) Procedures in Experiment 2. Experiment 3 Procedures were identical, except the Overpraise Teacher was replaced with the Inaccurate Praise Teacher."}
+```{r image, fig.env = "figure*", fig.pos = "h", fig.align='center', fig.width=7, fig.height=7, set.cap.width=T, num.cols.cap=2, fig.cap = "(A) Examples of good and bad tracings that subjects saw in the warm-up evaluation questions and teacher videos for Experiments 1-3. (B) Procedures in Experiment 2. Experiment 3 Procedures were identical, except the Overpraise Teacher was replaced with the Selective-Reverse Teacher."}
 img <- png::readPNG("figs/methods2.png")
 grid::grid.raster(img)
 ```
 
-After watching the videos, subjects were introduced to Kristen, another student who was working on two tracings and wants to enter one of them into a contest. Kristen received praise on one tracing ("Teacher Jane said this is great") from the Contingent Praise Teacher and praise on another tracing ("Teacher Susan said this is great") from the Overpraise Teacher. Subjects were not given access to the tracings themselves but only saw an envelope (presumably holding a tracing) with Teacher Jane's green star and an envelope with Teacher Susan's red star.
+After watching the videos, subjects were introduced to Kristen, another student who was working on two tracings and wants to enter one of them into a contest. Kristen received praise on one tracing ("Teacher Jane said this is great") from the Selective Teacher and praise on another tracing ("Teacher Susan said this is great") from the Overpraise Teacher. Subjects were not given access to the tracings themselves but only saw an envelope (presumably holding a tracing) with Teacher Jane's green star and an envelope with Teacher Susan's red star.
 
 Finally, subjects were asked the critical question: "Now Kristen is going to bring one of her tracings to a contest. Which tracing should she bring?" Then, subjects were asked which teacher wanted to be nice: "One of the teachers wanted to be nice. Who was trying to be nice?" 
 
@@ -169,8 +178,8 @@ adult.table = full_join(adult.tracing, adult.nicer)
 ```{r}
 #Analyze adult data
 adult.n = d_filt_adult %>%
-  summarise(tracing.n = sum(tracing_choseContingent), # number of subjects who chose the tracing praised by the selective praise teacher
-            nicer.n = sum(nicer_choseContingent), # number of subjects who chose the selective praise teacher as trying to be nice
+  summarise(tracing.n = sum(tracing_choseContingent), # number of subjects who chose the tracing praised by the Selective Teacher
+            nicer.n = sum(nicer_choseContingent), # number of subjects who chose the Selective Teacher as trying to be nice
             total.n = n())
 
 #Tracing question
@@ -195,15 +204,15 @@ e1.plot = ggplot(adult.table, aes(question, mean, fill = question)) +
 ```
 
 <!-- Mika -- need to check order of teachers and actor type for any effect.. -->
-Our main question was whether subjects would use the teachers' prior feedback to evaluate their feedback on the hidden tracings. Even though each teacher provided identical evaluations on the tracings, subjects overwhelmingly chose the tracing praised by the Contingent Praise Teacher (`r round(adult.table$mean[1]*100,2)`\%, $p$ < .001, Binomial Test). Further, subjects agreed that the Overpraise Teacher was *trying* to be nice (`r 100-(round(adult.table$mean[2]*100, 2))`\%, $p$ < .001, Binomial Test), suggesting that subjects did not have an overall preference for the Contingent Praise Teacher.
+Our main question was whether subjects would use the teachers' prior feedback to evaluate their feedback on the hidden tracings. Even though each teacher provided identical evaluations on the tracings, subjects overwhelmingly chose the tracing praised by the Selective Teacher (`r round(adult.table$mean[1]*100,2)`\%, $p$ < .001, Binomial Test). Further, subjects agreed that the Overpraise Teacher was *trying* to be nice (`r 100-(round(adult.table$mean[2]*100, 2))`\%, $p$ < .001, Binomial Test), suggesting that subjects did not have an overall preference for the Selective Teacher.
 
-Adults can distinguish between a teacher who always provides positive feedback (Overpraise Teacher) versus a teacher who provides feedback contingent on the quality of work (Contingent Praise Teacher). These results suggest that adults are sensitive to the informativeness of others' feedback: given observations of others' prior feedback, they can differentially evaluate subsequent, identical feedback. Moreover, this capacity to differentiate between teachers based on their prior informativeness lead subjects to then judge which of two tracings were better (without actually having seen the tracing).
+Adults can distinguish between a teacher who always provides positive feedback (Overpraise Teacher) versus a teacher who provides feedback contingent on the quality of work (Selective Teacher). These results suggest that adults are sensitive to the informativeness of others' feedback: given observations of others' prior feedback, they can differentially evaluate subsequent, identical feedback. Moreover, this capacity to differentiate between teachers based on their prior informativeness lead subjects to then judge which of two tracings were better (without actually having seen the tracing).
 
 <!-- If you want to refer to the figure in text, you can do it like this: Figure \ref{fig:results_e1}. -->
 
 #Experiment 2
 
-In Experiment 2, children themselves completed two tracings, and then watched the same videos as in Experiment 1. Children were then told that one of their own tracings had been praised by the Contingent Praise Teacher, and one had been praised by the Overpraise Teacher. Children were asked to decide which of their tracings was better based on the feedback from the teachers. We predicted that if children were sensitive to the informativeness of praise based on each teacher's history, children should weight the Contingent Praise Teacher's praise more heavily, and select the tracing praised by her. On the other hand, if children prefer to accept information from agents they perceive as positive or friendly, they might prefer the Overpraise Teacher. Finally, if children are not sensitive to the relative informativness of praise, they might choose a tracing at random.
+In Experiment 2, children themselves completed two tracings, and then watched the same videos as in Experiment 1. Children were then told that one of their own tracings had been praised by the Selective Teacher, and one had been praised by the Overpraise Teacher. Children were asked to decide which of their tracings was better based on the feedback from the teachers. We predicted that if children were sensitive to the informativeness of praise based on each teacher's history, children should weight the Selective Teacher's praise more heavily, and select the tracing praised by her. On the other hand, if children prefer to accept information from agents they perceive as positive or friendly, they might prefer the Overpraise Teacher. Finally, if children are not sensitive to the relative informativness of praise, they might choose a tracing at random.
 
 This experiment was preregistered in October 2017; the form can be found here: https://aspredicted.org/4r9dh.pdf. 
 
@@ -252,7 +261,7 @@ Children were tested in a private room inside of the preschool. The experimenter
 Next, children were asked to evaluate two pairs of tracings to verify that they could tell the difference between good and bad tracings. In each pair, one tracing was obviously very good and the other tracing was obviously very bad. Children were asked to judge which tracing was better; only children who chose the better tracing in each pair were included in analyses. 
 
 <!-- Introduction to Johnny and teacher videos -->
-Children were then shown a picture of a student, Johnny. The experimenter told children that Johnny was working on his tracings earlier and wanted help figuring out which of his tracings were good because he wanted to show them to his class later. Children then watched the videos of Johnny receiving praise from the Overpraise Teacher and the Contingent Praise Teacher (the same videos used in Experiment 1; the teachers were referred to as Teacher Jane and Teacher Susan). After watching each video, to verify that children understood and remembered each teacher's pattern of praise, children were shown a still frame of the video (with no stars on the drawings) and were asked which tracings the teacher said were great. Children responded by pointing to the tracings. If children incorrectly pointed to a tracing or missed a tracing, then the video was replayed and the memory check question was asked again. Only children who passed the memory check question by the second attempt were included in analyses. 
+Children were then shown a picture of a student, Johnny. The experimenter told children that Johnny was working on his tracings earlier and wanted help figuring out which of his tracings were good because he wanted to show them to his class later. Children then watched the videos of Johnny receiving praise from the Overpraise Teacher and the Selective Teacher (the same videos used in Experiment 1; the teachers were referred to as Teacher Jane and Teacher Susan). After watching each video, to verify that children understood and remembered each teacher's pattern of praise, children were shown a still frame of the video (with no stars on the drawings) and were asked which tracings the teacher said were great. Children responded by pointing to the tracings. If children incorrectly pointed to a tracing or missed a tracing, then the video was replayed and the memory check question was asked again. Only children who passed the memory check question by the second attempt were included in analyses. 
 
 <!-- % Test question -->
 After children watched the videos of the teachers and responded to the memory checks, the experimenter told the child that Teacher Jane and Teacher Susan were close by and they could give feedback on the subject's tracings from earlier. The experimenter left the room for 15 seconds with the envelopes containing the child's tracings and then returned. The experimenter said "Teacher Jane looked at this tracing and said that this one is great" and "Teacher Susan looked at this tracing and said that this one is great" (each envelope had the teacher's sticker on it). Finally, with the tracings still in the envelopes, the experimenter asked the child the critical question: "Now you can bring back your best tracing to show your teacher! Which one do you think is the best?" Children responded by pointing to one of the envelopes. 
@@ -310,7 +319,7 @@ e2_agereg = summary(glmer(tracing_selective ~ age + condition +
 ##Results and Discussion
 Only children who passed the initial evaluation questions and the memory check questions for each teacher video after the first or second attempt were included in the following analyses. Our main question was which tracing children thought was better: the tracing praised by the Overpraise Teacher or the tracing praised by the Contingent Teacher. Since children could not see which of their tracings was in each envelope, the teachers' praise was the only criteria available to children to evaluate which of their tracings was better.
 
-We found that children were significantly more likely to choose the drawing that had been praised by the Contingent Praise Teacher (`r round(e2.table$mean[1]*100,2)`\%, $p$ = `r round(binom_contest$p.value,3)`). Children's age did not predict their preference for the Contingent Praise Teacher ($B$ = `r round(e2_agereg$coefficients[2],3)`, $z$ = `r round(e2_agereg$coefficients[5],3)`, $p$ = `r round(e2_agereg$coefficients[11],3)`).
+We found that children were significantly more likely to choose the drawing that had been praised by the Selective Teacher (`r round(e2.table$mean[1]*100,2)`\%, $p$ = `r round(binom_contest$p.value,3)`). Children's age did not predict their preference for the Selective Teacher ($B$ = `r round(e2_agereg$coefficients[2],3)`, $z$ = `r round(e2_agereg$coefficients[5],3)`, $p$ = `r round(e2_agereg$coefficients[11],3)`).
 
 Thus, even preschool-aged children appear to be sensitive to the informativity of praise based on whether the agent has a history of contingent praise or not. Importantly, this means that the majority of children were able to override any positivity bias and avoid selecting the drawing associated with the Overpraise teacher, who might have been perceived as more nice or likeable.
 
@@ -342,7 +351,7 @@ e3.dems <- d_filt_e3 %>%
 
 ###Stimuli and Design
 
-Stimuli were identical to Experiment 2 except the Overpraise Teacher's video was replaced with the Inaccurate Praise Teacher's video. In the Inaccurate Praise video, the layout and order of tracing were the same as in the Contingent and Overpraise Teacher's video, but the teacher praised and gave stars to the worse tracings and provided a neutral response to the better tracings. 
+Stimuli were identical to Experiment 2 except the Overpraise Teacher's video was replaced with the Selective-Reverse Teacher's video. In the Inaccurate Praise video, the layout and order of tracing were the same as in the Contingent and Overpraise Teacher's video, but the teacher praised and gave stars to the worse tracings and provided a neutral response to the better tracings. 
 
 ###Procedure
 
@@ -394,7 +403,7 @@ In three experiments, we examined how children and adults evaluate the informati
 
 <!-- Should note here that the effect (in experiment 2 at least) is relatively small- children are nowhere near ceiling at selecting the Accurate teacher. So there is obviously some development that happens, which can be investigated in future research. -->
 
-Children's preference for the Contingent Praise Teacher is relatively weak compared with adults' preference. There are a few possible explanations for this discrepancy: (1) young children have relatively minimal experience evaluating products they have created, (2) they also have minimal experience in receiving neutral or negative feedback so they might have difficulty reasoning about its informational value, and (3) they might have a more difficult time inhibiting a desire to interact or agree with positively valenced agents. Since children gain more experience with receiving performance feedback and evaluating their own work in elementary school, older children may show a stronger preference for learning from teachers who provide accurate, contingent praise.
+Children's preference for the Selective Teacher is relatively weak compared with adults' preference. There are a few possible explanations for this discrepancy: (1) young children have relatively minimal experience evaluating products they have created, (2) they also have minimal experience in receiving neutral or negative feedback so they might have difficulty reasoning about its informational value, and (3) they might have a more difficult time inhibiting a desire to interact or agree with positively valenced agents. Since children gain more experience with receiving performance feedback and evaluating their own work in elementary school, older children may show a stronger preference for learning from teachers who provide accurate, contingent praise.
 
 In this study, we intentionally provided a \textit{contrast} between two teachers who vary in their informativeness and accuracy. However, when learning novel words, preschool-aged children have been observed to trust even inaccurate, unreliable informants in the absence of an accurate or informative adult [@jaswal2010young, @vanderbilt2014absence]. Recent work has suggested that young children need access to relevant alternatives to compute pragmatic implicatures [@barner2011accessing, @skordos2016children] or evaluate the informativeness of pedagogical demonstrations [@gweon2017order]. Thus, without the alternative of an accurate, contingent praiser, young children might be willing to trust a teacher who provides inaccurate or overpraise.  It might be important for young children to witness multiple informants to most effectively evaluate them (by better understanding what the teachers \textit{could} have said); future work should explore these possibilities. 
 
