adding kamins paper

--- a/cogsci_writeup/library.bib
+++ b/cogsci_writeup/library.bib
@@ -298,3 +298,14 @@
   year={2007},
   publisher={Nature Publishing Group}
 }
+
+@article{kamins1999person,
+  title={Person versus process praise and criticism: implications for contingent self-worth and coping.},
+  author={Kamins, Melissa L and Dweck, Carol S},
+  journal={Developmental psychology},
+  volume={35},
+  number={3},
+  pages={835},
+  year={1999},
+  publisher={American Psychological Association}
+}
