--- a/cogsci_writeup/uncertain_praise.Rmd
+++ b/cogsci_writeup/uncertain_praise.Rmd
@@ -113,8 +113,8 @@ This work on children's positivity bias in the selective trust literature has la
 
 The present work asks whether young children can track the informativeness of others' praise by observing others' evaluations of another child, and if so, whether they can then use others' informativeness to appropriately evaluate their own work. We chose a task that preschool-aged children are familiar with but motivated to improve on: tracing shapes with a pen. Experiment 1 confirms that adults can differentiate between a teacher who always provides praise (Overpraise Teacher) and a  teacher who only praises the better tracings (Selective Teacher); they can use teachers' prior informativeness to appropriately evaluate which of two hidden tracings is better. In a similar, first-person paradigm, experiment 2 demonstrates that even 4- and 5-year-olds can differentiate between these two types of teachers and endorse the Selective Teacher's praise. Experiment 3 controls for the frequency of praise provided by each teacher by pitting the Selective Teacher against a teacher who only provides praise to the worse tracings (Selective-Reverse Teacher). 
 
-```{r methods, fig.env = "figure*", fig.pos = "h", fig.align='center', fig.width=7, fig.height=7, set.cap.width=T, num.cols.cap=2, fig.cap = "(A) Examples of good and bad tracings that subjects saw in the warm-up evaluation questions and teacher videos for Experiments 1-3. (B) Procedures in Experiment 2. Experiment 3 Procedures were identical, except the Overpraise Teacher was replaced with the Selective-Reverse Teacher."}
-img <- png::readPNG("figs/methods2.png")
+```{r methods, fig.env = "figure*", fig.pos = "h", fig.align='center', fig.width=7, fig.height=7, set.cap.width=T, num.cols.cap=2, fig.cap = "(A) Examples of good and bad tracings that subjects saw in the warm-up evaluation questions and teacher videos for Experiments 1-3. (B) Teacher videos shown in Experiments 1-3. (C) Set-up and critical question for Experiments 2-3."}
+img <- png::readPNG("figs/methods_final.png")
 grid::grid.raster(img)
 ```
 
@@ -209,6 +209,22 @@ full_data_plot <- full_data %>%
 ```
 
 ```{r results, fig.env = "figure", fig.pos = "H", fig.align='center', fig.width=7.5, fig.height=5, out.width="3in", out.height="2in", set.cap.width=T, num.cols.cap=1, fig.cap = 'Results of Experiments 1-3: Proportion of participants choosing the tracing praised by the selective praiser. In Experiments 1 and 2, participants chose between Selective and Overpraise Teachers, and in Experiment 3, participants chose between Selective and Selective-Reversed Teachers. Error bars are 95 percent confidence intervals.'}
+
+ggplot(full_data_plot, aes(x = experiment, y = mean, fill = experiment)) +
+  geom_bar(stat="identity", width=.5) +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper),
+             position = position_dodge(width = .5))+
+  ylab("Tracing Praised by Selective Praiser") +
+  scale_fill_viridis(discrete = TRUE) +   
+  ggthemes::theme_few() + 
+  ylim(0,1) +
+  ggtitle("Which tracing is better?")+ 
+  theme(axis.title.x=element_blank(),
+        title = element_text(vjust=0.5, size=22),
+        legend.position="none",
+        axis.text.x  = element_text(vjust=0.5, size=20),
+        axis.text.y  = element_text(vjust=0.5, size=20),
+        axis.title.y = element_text(size=20))
 
 ggplot(full_data_plot, aes(x = experiment, y = mean, fill = experiment)) +
   geom_bar(stat="identity", width=.5) +
